third_party/move/move-compiler-v2/tests/more-v1/verification/verify/function_with_spec.exp

Diagnostics:
error: unresolved spec target
   ┌─ tests/more-v1/verification/verify/function_with_spec.move:15:10
   │
15 │     spec baz {
   │          ^^^


============ bytecode verification succeeded ========
